--- a/external-dns/helmrelease-external-dns.yaml
+++ b/external-dns/helmrelease-external-dns.yaml
@@ -7,7 +7,7 @@ spec:
   chart:
     spec:
       chart: external-dns
-      version: 5.1.x
+      version: 
       sourceRef:
         kind: HelmRepository
         name: bitnami
